feat: добавлена функция удаления ботов
