# api/openapi/bots.yaml
@@ -98,6 +98,43 @@ paths:
               schema:
                 $ref: '#/components/schemas/PlainError'
 
+    delete:
+      operationId: deleteBot
+      description: Удалить бота с указанным ID
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            example: example_bot
+          required: true
+          description: Уникальный ID бота.
+      responses:
+        "204":
+          description: Бот успешно удалён.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Bot'
+        "400":
+          description: Данные в запросе невалидны.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlainError'
+        "401":
+          description: Не был указан JWT токен.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlainError'
+        "404":
+          description: Бот с данным ID не найден.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlainError'
+
   /bots/{id}/status:
     get:
       operationId: getStatus
@@ -179,7 +216,7 @@ paths:
           required: true
           description: Уникальный ID бота.
       responses:
-        "200":
+        "204":
           description: Бот успешно запущен.
         "400":
           description: Данные в запросе невалидны.
@@ -213,7 +250,7 @@ paths:
           required: true
           description: Уникальный ID бота.
       responses:
-        "200":
+        "204":
           description: Бот успешно остановлен.
         "400":
           description: Данные в запросе невалидны.
@@ -247,7 +284,7 @@ paths:
           required: true
           description: Уникальный ID бота.
       responses:
-        "200":
+        "204":
           description: Бот успешно запущен и добавлен в автозапуск.
         "400":
           description: Данные в запросе невалидны.
@@ -281,7 +318,7 @@ paths:
           required: true
           description: Уникальный ID бота.
       responses:
-        "200":
+        "204":
           description: Бот удалён из автозапуска.
         "400":
           description: Данные в запросе невалидны.
