# internal/api/http/openapi_api.gen.go
@@ -21,6 +21,9 @@ type ServerInterface interface {
 	// (PUT /bots)
 	CreateBot(w http.ResponseWriter, r *http.Request)
 
+	// (DELETE /bots/{id})
+	DeleteBot(w http.ResponseWriter, r *http.Request, id string)
+
 	// (GET /bots/{id})
 	GetBot(w http.ResponseWriter, r *http.Request, id string)
 
@@ -57,6 +60,11 @@ func (_ Unimplemented) GetBots(w http.ResponseWriter, r *http.Request) {
 
 // (PUT /bots)
 func (_ Unimplemented) CreateBot(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (DELETE /bots/{id})
+func (_ Unimplemented) DeleteBot(w http.ResponseWriter, r *http.Request, id string) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -134,6 +142,34 @@ func (siw *ServerInterfaceWrapper) CreateBot(w http.ResponseWriter, r *http.Requ
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.CreateBot(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// DeleteBot operation middleware
+func (siw *ServerInterfaceWrapper) DeleteBot(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", chi.URLParam(r, "id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "id", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.DeleteBot(w, r, id)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -485,6 +521,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Put(options.BaseURL+"/bots", wrapper.CreateBot)
+	})
+	r.Group(func(r chi.Router) {
+		r.Delete(options.BaseURL+"/bots/{id}", wrapper.DeleteBot)
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/bots/{id}", wrapper.GetBot)
